--- a/environment.yml
+++ b/environment.yml
@@ -1,33 +1,54 @@
-name: stylegan2_pytorch
+name: ganvinci
 channels:
   - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
-  - ca-certificates=2022.6.15=ha878542_0
-  - certifi=2022.6.15=py37h89c1867_0
+  - blas=1.0=mkl
+  - ca-certificates=2022.07.19=h06a4308_0
+  - certifi=2022.6.15=py37h06a4308_0
+  - cudatoolkit=11.0.221=h6bb024c_0
+  - freetype=2.11.0=h70c0345_0
+  - giflib=5.2.1=h7b6447c_0
+  - intel-openmp=2021.4.0=h06a4308_3561
+  - jpeg=9b=h024ee3a_2
+  - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.38=h1181459_1
   - libffi=3.3=he6710b0_2
   - libgcc-ng=11.2.0=h1234567_1
   - libgomp=11.2.0=h1234567_1
+  - libpng=1.6.37=hbc83047_0
   - libstdcxx-ng=11.2.0=h1234567_1
+  - libtiff=4.1.0=h2733197_1
+  - libuv=1.40.0=h7b6447c_0
+  - libwebp=1.2.0=h89dd481_0
+  - lz4-c=1.9.3=h295c915_1
+  - mkl=2021.4.0=h06a4308_640
+  - mkl-service=2.4.0=py37h7f8727e_0
+  - mkl_fft=1.3.1=py37hd3c417c_0
+  - mkl_random=1.2.2=py37h51133e4_0
   - ncurses=6.3=h5eee18b_3
   - ninja=1.11.0=h924138e_0
+  - numpy-base=1.21.5=py37ha15fc14_3
   - openssl=1.1.1q=h7f8727e_0
   - pip=22.1.2=py37h06a4308_0
   - python=3.7.13=h12debd9_0
   - python_abi=3.7=2_cp37m
   - readline=8.1.2=h7f8727e_1
   - setuptools=61.2.0=py37h06a4308_0
+  - six=1.16.0=pyhd3eb1b0_1
   - sqlite=3.38.5=hc218d9a_0
   - tk=8.6.12=h1ccaba5_0
+  - typing_extensions=4.3.0=py37h06a4308_0
   - wheel=0.37.1=pyhd3eb1b0_0
   - xz=5.2.5=h7f8727e_1
   - zlib=1.2.12=h7f8727e_2
+  - zstd=1.4.9=haebb681_0
   - pip:
     - backcall==0.2.0
     - charset-normalizer==2.1.0
+    - clip==1.0
     - cycler==0.11.0
     - decorator==5.1.1
     - fonttools==4.34.4
@@ -56,11 +77,12 @@ dependencies:
     - requests==2.28.1
     - scikit-image==0.15.0
     - scipy==1.7.3
-    - six==1.16.0
     - tifffile==2021.11.2
+    - torch==1.7.1+cu110
+    - torchaudio==0.7.2
+    - torchvision==0.8.2+cu110
     - tqdm==4.64.0
     - traitlets==5.3.0
-    - typing-extensions==4.3.0
     - urllib3==1.26.10
     - wcwidth==0.2.5
-prefix: /home/pascal/anaconda3/envs/stylegan2_pytorch
+prefix: /home/sysl2trains/.conda/envs/stylegan2_pytorch
